more updates (i'm literally just trying to build out this template bro :sob:)

--- a/index.html
+++ b/index.html
@@ -163,6 +163,64 @@
             <h2 class="section__title-2">
                <span>services.</span>
             </h2>
+            <div class="services__container container grid">
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box">
+                        <i class="ri-layout-4-line"></i>
+                        </div>
+
+                        <h2 class="services__title">python</h2>
+
+                        <p class="services__description">
+                           waffle about python here, talk about the projects you worked on that involved python.
+                           especially the ones that used ML libraries, like tensorflow or pytorch.
+                           maybe talk about the projects you worked on for applied datasci.
+                        </p>
+                     </div>
+                  </div>
+               </article>
+
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box">
+                           <i class="ri-code-box-line"></i>
+                        </div>
+
+                        <h2 class="services__title">rust</h2>
+
+                        <p class="services__description">
+                           waffle about rust here, talk about the projects you worked on that involved rust.
+                           maybe talk about the projects you want to work on re: datasci.
+                        </p>
+                     </div>
+                  </div>
+               </article>
+
+               <article class="services__card">
+                  <div class="services__border"></div>
+
+                  <div class="services__content">
+                     <div class="services__icon">
+                        <div class="services__box">
+                           <i class="ri-question-mark"></i>
+                        </div>
+
+                        <h2 class="services__title">something else</h2>
+
+                        <p class="services__description">
+                           waffle about something else here.
+                        </p>
+                     </div>
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== PROJECTS ====================-->
