--- a/index.html
+++ b/index.html
@@ -225,7 +225,180 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            
+            <h2 class="section__title-1">
+               <span>projects</span>
+            </h2>
+
+            <div class="projects__container container grid">
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+                  
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-3.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div><article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="projects__subtitle">project 1</h3>
+                     <h2 class="projects__title">project 1 again</h2>
+
+                     <p class="projects__description">
+                        waffle waffle waffle
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> view
+                     </a>
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
