--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
+      <!-- cloudflare turnstile -->
+      <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" defer></script>
+
       <title>Garrett Boling - Portfolio</title>
    </head>
    <body>
@@ -72,7 +75,7 @@
                </h1>
                <div class="home__perfil">
                   <div class="home__image">
-                     <img src="assets/img/home-perfil.jpg" alt="Portrait image of Garrett Boling" class="home__img">
+                     <img src="assets/img/home-perfil.jpg" alt="Portrait image of Garrett Boling" class="home__img" loading="lazy">
                      <div class="home__shadow"></div>
 
                      <img src="assets/img/curved-arrow.svg" alt="curved arrow" class="home__arrow">
@@ -82,15 +85,15 @@
                   </div>
 
                   <div class="home__social">
-                     <a href="https://www.instagram.com/garrett.boling1212" target="_blank" class="home__social-link">
+                     <a href="https://www.instagram.com/garrett.boling1212" target="_blank" class="home__social-link" aria-label="Instagram">
                         <i class="ri-instagram-line"></i>
                      </a>
 
-                     <a href="https://www.linkedin.com/in/garrett-boling-04174b196/" target="_blank" class="home__social-link">
+                     <a href="https://www.linkedin.com/in/garrett-boling-04174b196/" target="_blank" class="home__social-link" aria-label="LinkedIn">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
 
-                     <a href="https://github.com/smonk333" target="_blank" class="home__social-link">
+                     <a href="https://github.com/smonk333" target="_blank" class="home__social-link" aria-label="GitHub">
                         <i class="ri-github-line"></i>
                      </a>
                   </div>
@@ -123,7 +126,7 @@
 
                <div class="about__perfil">
                   <div class="about__image">
-                     <img src="assets/img/about-perfil.jpg" alt="Profile image" class="about__img">
+                     <img src="assets/img/about-perfil.jpg" alt="Profile image" class="about__img" loading="lazy">
 
                      <div class="about__shadow"></div>
 
@@ -232,7 +235,7 @@
             <div class="projects__container container grid">
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -257,7 +260,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -282,7 +285,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -307,7 +310,7 @@
 
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-3.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-3.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -331,7 +334,7 @@
                </article>
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -354,7 +357,7 @@
                   </div>
                </article>
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -376,7 +379,7 @@
                      </a>
                   </div><article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img">
+                     <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img" loading="lazy">
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -449,6 +452,9 @@
                         <label for="user_message" class="contact__label">message</label>
                      </div>
 
+                     <p class="contact__message" id="contact-message"></p>
+
+                     <div class="cf-turnstile" data-sitekey="0x4AAAAAABCen9yCPNauv_yu"></div>
                      <button type="submit" class="contact__button button">
                         <i class="ri-send-plane-line"></i> send message.
                      </button>
@@ -470,15 +476,15 @@
                      </div>
 
                      <div class="contact__social-links">
-                        <a href="https://t.me/garrett_boling" target="_blank" class="contact__social-links">
+                        <a href="https://t.me/garrett_boling" target="_blank" class="contact__social-link" aria-label="Telegram">
                            <i class="ri-telegram-line"></i>
                         </a>
 
-                        <a href="https://m.me/garrett.boling1212" target="_blank" class="contact__social-links">
+                        <a href="https://m.me/garrett.boling1212" target="_blank" class="contact__social-link" aria-label="Messenger">
                            <i class="ri-messenger-line"></i>
                         </a>
 
-                        <a href="https://www.linkedin.com/in/garrett-boling-04174b196/" target="_blank" class="contact__social-links">
+                        <a href="https://www.linkedin.com/in/garrett-boling-04174b196/" target="_blank" class="contact__social-link" aria-label="LinkedIn">
                            <i class="ri-linkedin-box-line"></i>
                         </a>
                      </div>
@@ -500,7 +506,10 @@
       <script src=""></script>
       
       <!--=============== EMAIL JS ===============-->
-      
+      <script
+              type="text/javascript"
+              src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+      </script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
