--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                      send me a message.
                   </h2>
 
-                  <form action="" class="contact__form" id="contact-form">
+                  <form action="" class="contact__form" id="contact-form" method="post">
                      <div class="contact__group">
                         <div class="contact__box">
                            <input type="text" name="user_name" class="contact__input" id="name" required placeholder="first name">
