OH MY GOD IT WORKS

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                      </div>
 
                      <div class="contact__box contact__area">
-                        <textarea name="" id="user_message" class="contact__input" required placeholder="message"></textarea>
+                        <textarea name="user_message" id="user_message" class="contact__input" required placeholder="message"></textarea>
                         <label for="user_message" class="contact__label">message</label>
                      </div>
 
