fixed article misalignment, adding styles

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         waffle waffle waffle
                      </p>
                   </div>
-                  
+
                   <div class="projects__buttons">
                      <a href="" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> view
@@ -335,6 +335,7 @@
                      </a>
                   </div>
                </article>
+
                <article class="projects__card">
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
@@ -359,6 +360,8 @@
                      </a>
                   </div>
                </article>
+
+               <article class="projects__card">
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
 
@@ -380,7 +383,10 @@
                      <a href="" target="_blank" class="projects__link">
                         <i class="ri-github-line"></i> view
                      </a>
-                  </div><article class="projects__card">
+                  </div>
+               </article>
+
+               <article class="projects__card">
                   <div class="projects__image">
                      <img src="assets/img/project-2.jpg" alt="project 1" class="projects__img" loading="lazy">
 
@@ -390,7 +396,7 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">project 1</h3>
+                     <h3 class="projects__subtitle">project 331234124</h3>
                      <h2 class="projects__title">project 1 again</h2>
 
                      <p class="projects__description">
