fixed misalignments in articles, added scrollreveal.js, finished styles (for now)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </li>
 
                   <li class="nav__item">
-                     <a href="#contact" class="nav__link">contact me</a>
+                     <a href="#contact" class="nav__link button__ghost">contact me</a>
                   </li>
                </ul>
 
@@ -172,7 +172,6 @@
             <div class="services__container container grid">
                <article class="services__card">
                   <div class="services__border"></div>
-
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box">
@@ -192,7 +191,6 @@
 
                <article class="services__card">
                   <div class="services__border"></div>
-
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box">
@@ -211,7 +209,6 @@
 
                <article class="services__card">
                   <div class="services__border"></div>
-
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box">
@@ -534,7 +531,7 @@
       </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="/assets/js/scrollreveal.min.js"></script>
       
       <!--=============== EMAIL JS ===============-->
       <script
