--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </li>
 
                   <li class="nav__item">
-                     <a href="#contact" class="nav__link button__ghost">contact me.</a>
+                     <a href="#contact" class="nav__link">contact me.</a>
                   </li>
                </ul>
 
