changed favicon, changed some of the color choices

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="preload shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+      <link rel="manifest" href="assets/favicon/site.webmanifest">
 
       <!-- preloading fonts and whatnot -->
       <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
@@ -156,7 +159,8 @@
 
                <div class="about__info">
                   <p class="about__description">
-                     filler text here yadda yadda yadda you get the point, just move on already
+                     I'm a recent Clemson graduate with a Bachelor's of Arts in Computer Science, and I minored in
+                     Psychology.
                   </p>
 
                   <ul class="about__list">
