added new socials

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                <div class="about__info">
                   <p class="about__description">
-                     I'm a recent Clemson graduate with a Bachelor's of Arts in Computer Science, and I minored in
+                     I'm a recent Clemson graduate with a Bachelor's of Arts in Computer Science, and a minor in
                      Psychology.
                   </p>
 
@@ -500,11 +500,15 @@
                      </div>
 
                      <div class="contact__social-links">
-                        <a href="https://t.me/garrett_boling" target="_blank" class="contact__social-link" aria-label="Telegram">
+                        <a href="https://t.me/gboling02" target="_blank" class="contact__social-link" aria-label="Telegram">
+                           <i class="ri-whatsapp-line"></i>
+                        </a>
+
+                        <a href="https://wa.me/18642079092" target="_blank" class="contact__social-link" aria-label="WhatsApp">
                            <i class="ri-telegram-line"></i>
                         </a>
 
-                        <a href="https://m.me/garrett.boling1212" target="_blank" class="contact__social-link" aria-label="Messenger">
+                        <a href="https://m.me/garrett.boling1212" target="_blank" class="contact__social-link" aria-label="Facebook Messenger">
                            <i class="ri-messenger-line"></i>
                         </a>
 
