oops, got the links wrong

--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
                      </div>
 
                      <div class="contact__social-links">
-                        <a href="https://t.me/gboling02" target="_blank" class="contact__social-link" aria-label="Telegram">
+                        <a href="https://wa.me/18642079092" target="_blank" class="contact__social-link" aria-label="Telegram">
                            <i class="ri-whatsapp-line"></i>
                         </a>
 
-                        <a href="https://wa.me/18642079092" target="_blank" class="contact__social-link" aria-label="WhatsApp">
+                        <a href="https://t.me/gboling02" target="_blank" class="contact__social-link" aria-label="WhatsApp">
                            <i class="ri-telegram-line"></i>
                         </a>
 
