FIXED THE STUPID SERVICES CARDS

--- a/index.html
+++ b/index.html
@@ -122,8 +122,6 @@
                <div class="home__info">
                   <p class="home__description">
                      <b>Backend developer</b> with experience in Python, Rust, C, and C++.
-                     I love data science, and I hope to work in the field of
-                     computational drug discovery in the future.
                   </p>
 
                   <a href="#about" class="home__scroll">
@@ -190,11 +188,13 @@
             <div class="services__container container grid">
                <article class="services__card">
                   <div class="services__border"></div>
+
                   <div class="services__content">
                      <div class="services__icon">
-                        <div class="services__box">
-                        <i class="ri-layout-4-line"></i>
-                        </div>
+                        <div class="services__box"></div>
+                           <i class="ri-layout-4-line"></i>
+
+                     </div>
 
                         <h2 class="services__title">python</h2>
 
@@ -203,42 +203,46 @@
                            especially the ones that used ML libraries, like tensorflow or pytorch.
                            maybe talk about the projects you worked on for applied datasci.
                         </p>
-                     </div>
                   </div>
                </article>
 
                <article class="services__card">
                   <div class="services__border"></div>
+
                   <div class="services__content">
                      <div class="services__icon">
-                        <div class="services__box">
-                           <i class="ri-code-box-line"></i>
-                        </div>
+                        <div class="services__box"></div>
+                        <i class="ri-layout-4-line"></i>
 
-                        <h2 class="services__title">rust</h2>
-
-                        <p class="services__description">
-                           waffle about rust here, talk about the projects you worked on that involved rust.
-                           maybe talk about the projects you want to work on re: datasci.
-                        </p>
                      </div>
+
+                     <h2 class="services__title">python</h2>
+
+                     <p class="services__description">
+                        waffle about python here, talk about the projects you worked on that involved python.
+                        especially the ones that used ML libraries, like tensorflow or pytorch.
+                        maybe talk about the projects you worked on for applied datasci.
+                     </p>
                   </div>
                </article>
 
                <article class="services__card">
                   <div class="services__border"></div>
+
                   <div class="services__content">
                      <div class="services__icon">
-                        <div class="services__box">
-                           <i class="ri-question-mark"></i>
-                        </div>
+                        <div class="services__box"></div>
+                        <i class="ri-layout-4-line"></i>
 
-                        <h2 class="services__title">something else</h2>
-
-                        <p class="services__description">
-                           waffle about something else here.
-                        </p>
                      </div>
+
+                     <h2 class="services__title">python</h2>
+
+                     <p class="services__description">
+                        waffle about python here, talk about the projects you worked on that involved python.
+                        especially the ones that used ML libraries, like tensorflow or pytorch.
+                        maybe talk about the projects you worked on for applied datasci.
+                     </p>
                   </div>
                </article>
             </div>
