updating the contents of the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+      <!--<script rel="preconnect" src="https://kit.fontawesome.com/349947908d.js" crossorigin="anonymous"></script>-->
 
       <!--=============== REMIXICONS ===============-->
       <link rel="preload stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
@@ -183,7 +184,7 @@
          <!--==================== SERVICES ====================-->
          <section class="services section" id="services">
             <h2 class="section__title-2">
-               <span>services.</span>
+               <span>languages.</span>
             </h2>
             <div class="services__container container grid">
                <article class="services__card">
@@ -192,7 +193,7 @@
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box"></div>
-                           <i class="ri-layout-4-line"></i>
+                        <i class="ri-braces-line"></i>
 
                      </div>
 
@@ -212,16 +213,16 @@
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box"></div>
-                        <i class="ri-layout-4-line"></i>
+                        <i class="ri-code-box-line"></i>
 
                      </div>
 
-                     <h2 class="services__title">python</h2>
+                     <h2 class="services__title">rust</h2>
 
                      <p class="services__description">
-                        waffle about python here, talk about the projects you worked on that involved python.
-                        especially the ones that used ML libraries, like tensorflow or pytorch.
-                        maybe talk about the projects you worked on for applied datasci.
+                        I'm still actively learning Rust for its memory safety features, performance, and its frameworks
+                        for data science/ML and data visualization. I have a couple of projects that I'm working on
+                        porting over to Rust from Python.
                      </p>
                   </div>
                </article>
@@ -232,16 +233,16 @@
                   <div class="services__content">
                      <div class="services__icon">
                         <div class="services__box"></div>
-                        <i class="ri-layout-4-line"></i>
+                        <i class="ri-terminal-line"></i>
 
                      </div>
 
-                     <h2 class="services__title">python</h2>
+                     <h2 class="services__title">c/c++</h2>
 
                      <p class="services__description">
-                        waffle about python here, talk about the projects you worked on that involved python.
-                        especially the ones that used ML libraries, like tensorflow or pytorch.
-                        maybe talk about the projects you worked on for applied datasci.
+                        I've been writing in c/c++ for ~4 years now, and both languages have given me a strong
+                        foundation in programming as a whole. It has been a great language for getting my head around
+                        the concepts of memory safety, and it was my foundation for learning Rust.
                      </p>
                   </div>
                </article>
