fixed the about__shadow css

--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@
                      <img src="assets/img/about-perfil.webp" alt="Profile image" class="about__img" loading="lazy">
 
                      <div class="about__shadow"></div>
-
                      <div class="geometric-box"></div>
-
                      <img src="assets/img/random-lines.svg" alt="random lines" class="about__line">
                      <div class="about__box"></div>
                   </div>
@@ -164,7 +162,7 @@
 
                   <ul class="about__list">
                      <li class="about__item">
-                        my skills are None, i bring Nothing to the table (remove this later)
+                        I'm passionate about psychology,
                      </li>
                   </ul>
 
@@ -200,9 +198,9 @@
                         <h2 class="services__title">python</h2>
 
                         <p class="services__description">
-                           waffle about python here, talk about the projects you worked on that involved python.
-                           especially the ones that used ML libraries, like tensorflow or pytorch.
-                           maybe talk about the projects you worked on for applied datasci.
+                           My first choice for putting together a quick project or prototype is Python. I have ~4 years
+                           of experience with it, and I have used it for everything from backend web development to
+                           data science.
                         </p>
                   </div>
                </article>
