updated website contents

--- a/index.html
+++ b/index.html
@@ -160,9 +160,17 @@
                      Psychology.
                   </p>
 
+                  <h3>Some things I'm passionate about are:</h3>
+
                   <ul class="about__list">
                      <li class="about__item">
-                        I'm passionate about psychology,
+                        Treatment of psychological disorders
+                     </li>
+                     <li>
+                        Data science and machine learning
+                     </li>
+                     <li>
+                        Research on the use of Psychedelics in the treatment of anxiety/depression
                      </li>
                   </ul>
 
