updated website contents

--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
             <div class="projects__container container grid">
                <article class="projects__card">
                   <div class="projects__image">
-                     <img src="assets/img/project-1.jpg" alt="project 1" class="projects__img" loading="lazy">
+                     <img src="assets/img/arrows.png" alt="project 1" class="projects__img" loading="lazy">
+                     <!--<a href="https://www.flaticon.com/free-icons/compress" title="compress icons">Compress icons created by Creatype - Flaticon</a>-->
 
                      <a href="#" class="projects__button button">
                         <i class="ri-arrow-right-up-line"></i>
@@ -272,11 +273,12 @@
                   </div>
 
                   <div class="projects__content">
-                     <h3 class="projects__subtitle">project 1</h3>
-                     <h2 class="projects__title">project 1 again</h2>
+                     <h3 class="projects__subtitle">a VST3 compressor plugin</h3>
+                     <h2 class="projects__title">Pressed</h2>
 
                      <p class="projects__description">
-                        waffle waffle waffle
+                        A VST3 compressor plugin that I wrote in C++ using the PampleJUCE/JUCE framework. This is my
+                        first attempt at writing a VST3 plugin.
                      </p>
                   </div>
 
@@ -532,7 +534,6 @@
             </div>
          </section>
       </main>
-
       <!--==================== FOOTER ====================-->
       <footer class="footer">
          <div class="footer__container container grid">
@@ -566,11 +567,6 @@
       <!--=============== SCROLLREVEAL ===============-->
       <script src="/assets/js/scrollreveal.min.js"></script>
       
-      <!--=============== EMAIL JS ===============-->
-<!--      <script-->
-<!--              type="text/javascript"-->
-<!--              src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">-->
-<!--      </script>-->
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
